# rttr

./: CMakeLists.txt  CMakePresets.json
CMake/: 3rd_party_libs.cmake  config.cmake  installer.cmake  utility.cmake
doc/: CMakeLists.txt  DoxyFile.cfg.in
src/benchmarks/: CMakeLists.txt
src/benchmarks/bench_method/: CMakeLists.txt  bench_find_method.cpp  bench_invoke_method.cpp  bench_method.cmake  pch.h  test_methods.cpp  test_methods.h
src/benchmarks/bench_rttr_cast/: CMakeLists.txt  bench_rttr_cast.cmake  benchmark_rttr_cast.cpp  test_classes.h
src/benchmarks/bench_variant/: CMakeLists.txt  bench_variant.cmake  bench_variant_conversion.cpp  bench_variant_create.cpp
src/examples/: CMakeLists.txt
src/examples/json_serialization/: CMakeLists.txt  def_shape.h  from_json.cpp  from_json.h  main.cpp  to_json.cpp  to_json.h
src/examples/playground/: CMakeLists.txt  main.cpp
src/examples/scripting/: CMakeLists.txt  chaiscript_visitor.h  main.cpp  pch.h  player.h
src/rttr/: CMakeLists.txt  argument.h  array_range.h  constructor.cpp  destructor.cpp  enum_flags.h  enumeration.cpp  method.cpp  policy.cpp  policy.h  polymoph_mapper.h  polymoph_ptr.h  property.cpp  property.h  registration.h  rttr.cmake  type.cpp  type.h  variant.cpp  variant.h  variant_associative_view.cpp  variant_associative_view.h  variant_polymoph_view.cpp  variant_polymoph_view.h  variant_sequential_view.cpp  variant_sequential_view.h  wrapper_mapper.h
src/rttr/detail/base/: core_prerequisites.h  platform.h
src/rttr/detail/comparison/: comparable_types.h  compare_less.h  compare_less_impl.h
src/rttr/detail/constructor/: constructor_wrapper.h  constructor_wrapper_base.cpp
src/rttr/detail/conversion/: number_conversion.h
src/rttr/detail/default_arguments/: default_arguments.h  invoke_with_defaults.h
src/rttr/detail/destructor/: destructor_wrapper_base.cpp  destructor_wrapper_base.h
src/rttr/detail/enumeration/: enumeration_wrapper_base.cpp  enumeration_wrapper_base.h
src/rttr/detail/filter/: filter_item_funcs.h
src/rttr/detail/impl/: argument_impl.h  array_range_impl.h  associative_mapper_impl.h  polymoph_mapper_impl.h  polymoph_ptr_impl.h  sequential_mapper_impl.h  wrapper_mapper_impl.h
src/rttr/detail/metadata/: metadata_handler.h
src/rttr/detail/method/: method_accessor.h  method_invoker.h  method_wrapper.h  method_wrapper_base.cpp
src/rttr/detail/misc/: argument_extractor.h  function_traits.h  misc_type_traits.h  register_wrapper_mapper_conversion.h  sequential_container_type_traits.h  standard_types.cpp  template_type_trait_impl.h  utility.h
src/rttr/detail/parameter_info/: parameter_infos.h
src/rttr/detail/policies/: prop_policies.h
src/rttr/detail/property/: property_wrapper_base.cpp  property_wrapper_base.h  property_wrapper_func.h  property_wrapper_member_func.h  property_wrapper_member_object.h  property_wrapper_object.h
src/rttr/detail/registration/: bind_impl.h  registration_impl.h  registration_manager.h
src/rttr/detail/type/: get_create_variant_func.h  type_data.cpp  type_data.h  type_impl.h  type_name.h  type_register.cpp  type_register.h
src/rttr/detail/variant/: variant_data_converter.h  variant_data_policy.h  variant_impl.h
src/rttr/detail/variant_associative_view/: variant_associative_view_creator_impl.h
src/rttr/detail/variant_polymoph_view/: variant_polymoph_view_creator.h  variant_polymoph_view_creator_impl.h  variant_polymoph_view_private.h
src/rttr/detail/variant_sequential_view/: variant_sequential_view_creator_impl.h
src/rttr/detail/visitor/: visitor_impl.h  visitor_iterator.h
src/unit_tests/: CMakeLists.txt  main.cpp  pch.h  test_classes.h  unit_tests.cmake
src/unit_tests/base_library/: CMakeLists.txt  base_class.h  files.cmake
src/unit_tests/constructor/: CMakeLists.txt  constructor_default_arg_test.cpp  constructor_invoke_test.cpp  constructor_misc_test.cpp  constructor_param_info_test.cpp  constructor_query_test.cpp  constructor_retrieve_test.cpp
src/unit_tests/destructor/: CMakeLists.txt
src/unit_tests/enumeration/: CMakeLists.txt  enumeration_conversion.cpp  enumeration_misc.cpp
src/unit_tests/instance/: CMakeLists.txt  instance_test.cpp
src/unit_tests/method/: CMakeLists.txt  method_access_level_test.cpp  method_default_arg_test.cpp  method_invoke_defaults_test.cpp  method_invoke_test.cpp  method_misc_test.cpp  method_order_test.cpp  method_param_info_test.cpp  method_query_test.cpp  test_method_reflection.cpp  test_method_reflection.h
src/unit_tests/misc/: CMakeLists.txt  array_range_test.cpp  enum_flags_test.cpp  library_test.cpp  test_misc.cpp
src/unit_tests/plugin/: CMakeLists.txt  plugin.cmake  test_class_plugin.cpp
src/unit_tests/property/: CMakeLists.txt  property_class_inheritance.cpp  property_class_invoke_wrapper.cpp  property_global_function.cpp  property_global_object.cpp  property_member_function.cpp  property_member_object.cpp  property_misc_test.cpp  property_order_test.cpp
src/unit_tests/type/: CMakeLists.txt  test_type.cpp  test_type.h  test_type_names.cpp  type_prop_meth_invoke.cpp
src/unit_tests/variant/: CMakeLists.txt  pch.h  variant_assign_test.cpp  variant_assign_test2.cpp  variant_cmp_greater_or_equal.cpp  variant_cmp_greater_test.cpp  variant_cmp_less_or_equal.cpp  variant_cmp_less_test.cpp  variant_conv_test.cpp  variant_conv_to_double.cpp  variant_conv_to_float.cpp  variant_conv_to_int16.cpp  variant_conv_to_int32.cpp  variant_conv_to_int64.cpp  variant_conv_to_int8.cpp  variant_conv_to_string.cpp  variant_conv_to_uint16.cpp  variant_conv_to_uint32.cpp  variant_conv_to_uint64.cpp  variant_conv_to_uint8.cpp  variant_ctor_test.cpp  variant_misc_test.cpp
src/unit_tests/variant_array_view/: CMakeLists.txt  variant_array_view_test.cpp
src/unit_tests/variant_associative_view/: CMakeLists.txt  variant_associative_view_test.cpp
src/unit_tests/variant_polymoph_view/: CMakeLists.txt  variant_polymoph_view_test.cpp
src/unit_tests/variant_sequential_view/: CMakeLists.txt  variant_sequential_view_test.cpp
src/unit_tests/visitor/: CMakeLists.txt  visitor_test_class.h
(+4 files in other folders)
